--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-project.name=SampleAntProject
+project.name=SampleAntProjectMBPL
 jar.home=${basedir}/lib
 war.home=${basedir}/war
 app.home=WebContent/META-INF/
